--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -28,6 +28,26 @@
       margin-top: 100px;
       margin-left: 100px;
   }
+
+  .backbutton-div {
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  .backbutton {
+    display: inline-block;
+    padding: 0.5em 3em;
+    margin: 0 0.3em 0.3em 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: black;
+    text-align: center;
+    transition: all 0.15s;
+    cursor: pointer;
+  }
   
   @media all and (max-width:30em) {
     .dashboard-btn {
